listings/k8s-yamls/shell-operator-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
  creationTimestamp: 2019-08-13T07:44:56Z
  generation: 2
  labels:
    app: shell-operator
  name: shell-operator
  namespace: shell-operator
  resourceVersion: "14235546"
  selfLink: /apis/extensions/v1beta1/namespaces/shell-operator/deployments/shell-operator
  uid: 3e815534-bd9e-11e9-8033-005056950dfc
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: shell-operator
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: shell-operator
    spec:
      containers:
      - image: nexus-registry.s7.aero:18116/shell-operator:itkey-v2.7
        imagePullPolicy: Always
        name: shell-operator
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /hooks/namespace-hook.sh
          name: namespace-hook-shell
          subPath: namespace-hook.sh
        - mountPath: /hooks/wild-ingress-hook-shell.sh
          name: wild-ingress-hook-shell
          subPath: wild-ingress-hook-shell.sh
        - mountPath: /yamls/network-policy.yaml
          name: network-policy
          subPath: network-policy.yaml
        - mountPath: /yamls/grafana-project-cm.yaml
          name: grafana-project-cm
          subPath: grafana-project-cm.yaml
        - mountPath: /root/.docker/config.json
          name: nexus-secret
          subPath: .dockerconfigjson
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsUser: 0
      serviceAccount: monitor-namespaces-acc
      serviceAccountName: monitor-namespaces-acc
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 511
          name: namespace-hook-shell
        name: namespace-hook-shell
      - configMap:
          defaultMode: 511
          name: wild-ingress-hook-shell
        name: wild-ingress-hook-shell
      - configMap:
          defaultMode: 511
          name: network-policy
        name: network-policy
      - name: nexus-secret
        secret:
          defaultMode: 420
          secretName: nexus-secrets
      - configMap:
          defaultMode: 511
          name: grafana-project-cm
        name: grafana-project-cm
